# Neural-JSDF

./: .gitignore  ex.cpp  ex.h
cpp/: CMakeLists.txt
cpp/include/: NJSDF.h  controller.h  math_type_define.h  robot.h
cpp/src/: NJSDF.cpp  controller.cpp  main.cpp  robot.cpp
learning/data-sampling/: genDataset.m  (+5 more)
learning/nn-learning/: CMakeLists.txt  Get_NN_model_paremeter.ipynb  NJSDF.cpp  NJSDF.ipynb  NJSDF_.cpp  py_cpp_test.cpp  py_cpp_test.ipynb  run_sdf.py  test_model.ipynb  train_sdf_sh.py  train_study.ipynb
learning/nn-learning/log/: heatmap_data.m  log(b=10000).txt  log(b=100000).txt  log(b=1024).txt  log(b=150000).txt  log(b=200000).txt  log(b=2048).txt  log(b=250000).txt  log(b=256).txt  log(b=300000).txt  log(b=4096).txt  log(b=50000).txt  log(b=50000)_dropout_0.01.txt  log(b=50000)_dropout_0.02.txt  log(b=50000)_dropout_0.04.txt  log(b=50000)_dropout_0.06.txt  log(b=50000)_dropout_0.08.txt  log(b=50000)_dropout_0.1.txt  log(b=512).txt  log_read.m
learning/nn-learning/model/: sdf_256x5_mesh_10000.pt  sdf_256x5_mesh_100000.pt  sdf_256x5_mesh_1024.pt  sdf_256x5_mesh_150000_drop_0.000000.pt  sdf_256x5_mesh_200000_drop_0.000000.pt  sdf_256x5_mesh_2048.pt  sdf_256x5_mesh_250000_drop_0.000000.pt  sdf_256x5_mesh_256.pt  sdf_256x5_mesh_300000_drop_0.000000.pt  sdf_256x5_mesh_350000_drop_0.000000.pt  sdf_256x5_mesh_4096.pt  sdf_256x5_mesh_50000_drop_0.010000.pt  sdf_256x5_mesh_50000_drop_0.020000.pt  sdf_256x5_mesh_50000_drop_0.040000.pt  sdf_256x5_mesh_50000_drop_0.060000.pt  sdf_256x5_mesh_50000_drop_0.080000.pt  sdf_256x5_mesh_50000_drop_0.100000.pt  sdf_256x5_mesh_512.pt
learning/nn-learning/sdf/: network_macros_mod.py  robot_sdf.py
(+2 files in other folders)
